--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,10 @@ img{
     max-width: 50%;
     max-height: 50%;
 }
+
+@media (max-width:360px){
+    .titulo{
+        font-size: 150%;
+        padding: 0px;
+    }
+}
